--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,7 @@
     "baseUrl": "src",
     "paths": {
       "@app/*": ["app/*"],
-      "@components/*": ["app/components/*"]
+      "@components/*": ["app/components/*"],
     }
   },
   "angularCompilerOptions": {
